--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="bento-grid">
     <div class="item">
       <div class="lg-text"> Create and schedule content <em>quicker.</em></div>
-      <img src="/assets/images/illustration-create-post.webp" alt="" />
+      <img src="/assets/images/illustration-create-post.webp" alt="hi" />
     </div>
 
     <div class="item">
